Flip past trip order + fix permission check to allow admin to add users to private trips.